2002-12-07  JMB  Time columns

    There is now a "Time" column type.  It uses the Qtopia system setting
    for 12/24 hour display preference, and there is a "Show Seconds"
    checkbox in the PortaBase preferences dialog.  Times in imported CSV
    files can be formatted in either 12 or 24 hour format, or in number
    of seconds past midnight, or -1 or blank for a "None" time.

2002-12-01  JMB  Bugfix in filter condition indices, filtered export

    The data column for filter condition position indices had been declared
    incorrectly, causing problems when loading filters from older format
    PortaBase files; this should be fixed now (although the original
    condition order is often not recoverable; a new valid order is defined).

    The CSV export feature now exports only rows which pass the current
    filter.  For the old "export all" behavior, just select the "All Rows"
    filter before exporting.

2002-11-30  JMB  Case sensitivity bugfix

    Applied a patch to MetaKit that allows c4_View Finds and Selects to be
    case sensitive (which I thought they already were).  This fixes
    several bugs related to columns, views, sortings, and filters which
    have names differing only by case.

2002-11-29  JMB  Optional checkbox toggle in data viewer, date selector
                 enhancements

    Added a preference which when checked allows you to toggle boolean
    values directly in the data viewer by clicking the appropriate cell.
    This makes it more convenient to use PortaBase as a todo list, but
    also makes it easier to accidentally change data values.

    Changed the date selector dialog so that the month is displayed as
    a droplist and the year is displayed as a spinbox; thus both can
    be changed directly to any desired value without having to
    repeatedly press the next or previous buttons.

2002-11-26  JMB  UTF-8 CSV file import

    Fixed a one-line bug which caused CSV files to be imported as Latin-1
    instead of UTF-8.
